delete Characters when HP is Zero